# funder-tracer

./: .gitignore  README.md  __init__.py  dtic.py  dtic.spec  grants.R  pyproject.toml
.github/workflows/: build_executables.yml
