[tool.poetry]
name = "funder-tracer"
version = "0.1.0"
description = ""
authors = ["nathan kim <nathanckim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
black = "^24.8.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
