[tool.poetry]
name = "funder-tracer"
version = "0.1.0"
description = ""
authors = ["nathan kim <nathanckim18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
pandas = "^2.2.2"
black = "^24.8.0"
click = "^8.1.7"
tqdm = "^4.66.5"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
